# DS-Capstone

./: Final_Project_Complete.ipynb  README.md  pyproject.toml
.github/workflows/: qodana_code_quality.yml
EDA/: EDA-And-Data-Cleaning.ipynb  First-Dive.ipynb
Model Training/: First Modeling.ipynb  Neural Models.ipynb  Statistical Inference.ipynb  Statistical Modeling.ipynb
