[project]
name = "Yelp-Review-Transformer"
version = "0.4.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]
authors = [
    { name = "Ben Funk", email = "funkbj1@gmail.com" },
]
