[project]
name = "Yelp-Review-Transformer"
version = "0.5.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]
authors = [
    { name = "Ben Funk", email = "funkbj1@gmail.com" },
]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true